--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     ],
     "browser_action": {
       "default_title": "코고 커스텀",
-      "default_popup": "views/popup.html"
+      "default_popup": "popup.html"
     },
     "content_scripts": [
       {
